--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,12 @@
     "license": "GPL-3.0-or-later",
     "require": {
         "php": "^7.3.0",
-        "dazzlesoftware/http": "^1.0",
-        "dazzlesoftware/registry": "^1.0",
-        "dazzlesoftware/uri": "^1.0"
+        "dazzlesoftware/http": "^1.0|^2.0",
+        "dazzlesoftware/registry": "^1.0|^2.0",
+        "dazzlesoftware/uri": "^1.0|^2.0"
     },
     "require-dev": {
-        "dazzlesoftware/dazzle-coding-standard": "^1.0",
+        "dazzlesoftware/dazzle-coding-standard": "^1.0|^2.0",
         "phpunit/phpunit": "^9.0"
     },
     "autoload": {
@@ -28,7 +28,8 @@
     "minimum-stability": "dev",
     "extra": {
         "branch-alias": {
-            "dev-2.0-dev": "2.0-dev"
+            "dev-master": "1.x-dev",
+            "dev-develop": "2.x-dev"
         }
     }
 }
